data/derived/comb/progs/unify/prog5188.ml.out
Characters 239-254:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a * 'b
